# slintlearn

./: Cargo.toml  index.html
pkg/: package.json  rigidbod.d.ts  rigidbod.js  rigidbod_bg.wasm.d.ts
shaders/: circle.frag  circle.vert  tut.frag  tut.vert
src/: context.rs  main.rs  mesh.rs  quad.rs  shader.rs  shapes.rs
