[package]
name = "rigidbod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.2"
nalgebra-glm = "0.18.0"
slint = { git = "https://github.com/slint-ui/slint.git" }

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
slint = { git = "https://github.com/slint-ui/slint.git" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
